# PythonPlugin

./: .gitignore  CMakeLists.txt  Makefile.Linux  Makefile.OSX  README.linux  README.md  build-linux.sh  plugin.pyx
Builds/Linux/: Makefile
Builds/MacOSX/Config/: Plugin.xcconfig  Plugin.xcconfig.tmpl  Plugin_Debug.xcconfig  Plugin_Release.xcconfig  get_depends.sh
Builds/MacOSX/PythonPlugin.xcodeproj/: project.pbxproj
PythonPlugin/: CMAKE_README.txt  CMakeLists.txt  FindLibFreetype2.cmake  Makefile  OpenEphysLib.cpp  PythonEditor.cpp  PythonPlugin  PythonPlugin.cpp  PythonPlugin.h  PythonSource.cpp  PythonSource.h
PythonPlugin.xcodeproj/: project.pbxproj
PythonPlugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PythonPlugin/Source/: Makefile  OpenEphysLib.cpp  PythonEditor.cpp  PythonEditor.h  PythonEvent.h  PythonFilter.cpp  PythonFilter.h  PythonParamConfig.h  PythonPlugin.cpp  PythonPlugin.h  PythonSink.cpp  PythonSink.h  PythonSource.cpp  PythonSource.h  Source
SPWfinder/: Makefile  Makefile.Linux  Makefile.OSX  Makefile.linux  SPWfinder.pyx  get_test_data.py  plugin.pyx
Scripts/: test_multiprocessing.py
Source/: OpenEphysLib.cpp  PythonFilter.cpp  PythonPlugin.cpp
Utils/: FindLibZMQ.cmake
WindowsPlugin/: Python.vcxproj  Python.vcxproj.filters  PythonEnv.props
ZMQPlugins/: plot_process_zmq.py  plot_subprocess_zmq.py  simple_plotter_zmq.py
multiprocessing_plugin/: multiprocessing_plugin.pyx  plot_subprocess.py  simple_plotter.py  test_multiprocessing.py
negate4/: Makefile  plugin.c  plugin.h  plugin.pyx
pulse_test_delay/: Makefile  Makefile.OSX  Makefile.linux  plugin.pyx  pulse_test_delay.pyx
python_modules/: .config.py  .gitignore  generatePlugin.py  plugin.pyx
python_modules/Scripts/: run_simple_plotter.py
python_modules/ZMQPlugins/: simple_plotter_zmq.py
python_modules/multiprocessing_plugin/: multiprocessing_plugin.pyx  plot_mod.py
python_modules/old_style_plugins/pulse_test_delay/: delaytest.xml
python_modules/old_style_plugins/spwfinder/: spwfinder.pyx
python_modules/old_style_plugins/spwrandom/: __init__.py  spwrandom.pyx
python_modules/old_style_plugins/swofinder/: swofinder.pyx
python_modules/pulse_test_delay/: pulse_test_delay.pyx  setup.py
python_modules/signal_plot/: basic_animation.py  signal_plot.pyx  test_signal_plot.py
python_modules/spwdouble/: setup.py  spwdouble.pyx
python_modules/spwfinder/: setup.py  spwfinder.pyx  test1.ipynb
python_modules/spwfinder_new/: setup.py  spwfinder_new.pyx
python_modules/spwrandom/: .gitignore  setup.py  spwrandom.pyx
python_modules/template/: setup.py  template.pyx
python_modules/test/: setup.py  test.pyx
python_modules/test2/: setup.py  test2.pyx
python_modules/testML/: setup.py  subClient.py  sub_client.py  testML.cp36-win_amd64.pyd  testML.cp37-win_amd64.pyd  testML.pyx
python_modules/testPrint/: setup.py  testPrint.cp36-win_amd64.pyd  testPrint.pyx
python_modules/yPowerThresh/: setup.py  yPowerThresh.pyx
rescale/: Makefile  Makefile.linux  plugin.pyx
signal_plot/: Makefile.Linux  Makefile.OSX  plot_mod.py  plugin.pyx  signal_plot.pyx  sliderplot.py
spwdouble/: spwdouble.pyx
spwfinder/: spwfinder.pyx
spwrandom/: spwrandom.pyx
swofinder/: spwfinder.pyx  swofinder.pyx  test_params.py
